src/objects/sma__MATerritoryCollection__c.object
<CustomObject>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>sma__MATerritoryCollectionBaseObject__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__LastRunDate__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Territory Collection</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>